force-app/main/default/objects/Case/fields/Is_Payment_Received__c.field-meta.xml
<CustomField>
    <fullName>Is_Payment_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Payment Received</label>
    <type>Checkbox</type>
</CustomField>