force-app/main/default/objects/Case/fields/Pest_Type__c.field-meta.xml
<CustomField>
    <fullName>Pest_Type__c</fullName>
    <description>Details the type of Pest being dealt with in this Case.</description>
    <label>Pest Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rodents</fullName>
            </value>
            <value>
                <fullName>Rodents Additional Treatment</fullName>
            </value>
            <value>
                <fullName>Carpet Beetles/Moths</fullName>
            </value>
            <value>
                <fullName>Carpet Beetles/Moths Additional Treatment</fullName>
            </value>
            <value>
                <fullName>Advice Visit - All Pests</fullName>
                <isActive>false</isActive>
                <label>Advice Visit - All Pests</label>
            </value>
            <value>
                <fullName>Ants</fullName>
                <isActive>false</isActive>
                <label>Ants</label>
            </value>
            <value>
                <fullName>Ants Additional</fullName>
                <isActive>false</isActive>
                <label>Ants Additional</label>
            </value>
            <value>
                <fullName>Bed Bugs</fullName>
                <isActive>false</isActive>
                <label>Bed Bugs</label>
            </value>
            <value>
                <fullName>Bed Bugs Additional Treatment</fullName>
                <isActive>false</isActive>
                <label>Bed Bugs Additional Treatment</label>
            </value>
            <value>
                <fullName>Cockroaches</fullName>
                <isActive>false</isActive>
                <label>Cockroaches</label>
            </value>
            <value>
                <fullName>Cockroaches Additional Treatment</fullName>
                <isActive>false</isActive>
                <label>Cockroaches Additional Treatment</label>
            </value>
            <value>
                <fullName>Contract Appointment (12 months)</fullName>
                <isActive>false</isActive>
                <label>Contract Appointment (12 months)</label>
            </value>
            <value>
                <fullName>Contract Appointment (18 months)</fullName>
                <isActive>false</isActive>
                <label>Contract Appointment (18 months)</label>
            </value>
            <value>
                <fullName>Contract Appointment (6 months)</fullName>
                <isActive>false</isActive>
                <label>Contract Appointment (6 months)</label>
            </value>
            <value>
                <fullName>Fleas</fullName>
                <isActive>false</isActive>
                <label>Fleas</label>
            </value>
            <value>
                <fullName>Fleas Additional Treatment</fullName>
                <isActive>false</isActive>
                <label>Fleas Additional Treatment</label>
            </value>
            <value>
                <fullName>Pest Control Visit (1 hour)</fullName>
                <isActive>false</isActive>
                <label>Pest Control Visit (1 hour)</label>
            </value>
            <value>
                <fullName>Pest Control Visit (30 mins)</fullName>
                <isActive>false</isActive>
                <label>Pest Control Visit (30 mins)</label>
            </value>
            <value>
                <fullName>Wasps/Hornets</fullName>
                <isActive>false</isActive>
                <label>Wasps/Hornets</label>
            </value>
            <value>
                <fullName>Wasps/Hornets Additional Nest (to be treated at the same time as the first nest)</fullName>
                <isActive>false</isActive>
                <label>Wasps/Hornets Additional Nest (to be treated at the same time as the first nest)</label>
            </value>
            <value>
                <fullName>Wasps/Hornets Additional Treatment (If previous was unsuccessful)</fullName>
                <isActive>false</isActive>
                <label>Wasps/Hornets Additional Treatment (If previous was unsuccessful)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>