force-app/main/default/objects/Case/recordTypes/HMO.recordType-meta.xml
<RecordType>
    <fullName>HMO</fullName>
    <active>true</active>
    <businessProcess>Case Support Process</businessProcess>
    <label>HMO</label>
</RecordType>