force-app/main/default/objects/Case/recordTypes/Service_Request_Pest_Control.recordType-meta.xml
<RecordType>
    <fullName>Service_Request_Pest_Control</fullName>
    <active>true</active>
    <businessProcess>Case Support Process</businessProcess>
    <description>This will be the case type created via the Experience site omniscript, and will use a picklist to track pest types.</description>
    <label>Service Request - Pest Control</label>
</RecordType>