force-app/main/default/objects/Case/listViews/HMO_Team_Leaders_Case.listView-meta.xml
<ListView>
    <fullName>HMO_Team_Leaders_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>HMO - Team Leaders</label>
    <queue>HMO_Team_Leaders</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>