force-app/main/default/objects/Case/listViews/Pest_Control_Team_Case.listView-meta.xml
<ListView>
    <fullName>Pest_Control_Team_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Pest Control Team</label>
    <queue>Pest_Control_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>